safari 9.x fix for unaligned dropdown properties

--- a/src/irb-app/irb-builder/builder-pane/index.styl
+++ b/src/irb-app/irb-builder/builder-pane/index.styl
@@ -6,6 +6,9 @@ transition-time = .125s
   min-height 50px
   overflow hidden
 
+  builder-screen-contextual
+    flex-shrink 0
+
   .builder-pane-offset
     display flex
     transition transform transition-time
