--- a/src/irb-app/irb-builder/index.styl
+++ b/src/irb-app/irb-builder/index.styl
@@ -272,6 +272,7 @@ header-button-transition-duration = 150ms
   // resource-type-control
   .resource-type-control
     border-bottom 1px solid grey-150
+    flex-shrink 0
     padding 10px 15px
     mp-toggle
       width 100%
